<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_tasks"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:maxHeight="300dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountName" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTasks" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTasks" />

</androidx.constraintlayout.widget.ConstraintLayout> 